(fix): ad signup too small on mobile

--- a/app/src/modules/monetization/ad-sharing/ad-sharing.component.scss
+++ b/app/src/modules/monetization/ad-sharing/ad-sharing.component.scss
@@ -16,7 +16,7 @@ m-ad-sharing {
     textarea {
       width: 100%;
       resize: none;
-      height: 5em;
+      height: 8em;
       padding: $minds-padding*2;
       line-height:18px;
       border:1px solid #EEE;
